css/audit.css
html, body {
    padding: 0;
    margin: 0;
    font-family: Roboto, sans-serif;
    background: #F2F2F2;
    min-height: 100%;
    height: 100%;
    overflow: visible;
}

.flex {
    display: -webkit-flex; /* Safari */
    display: flex;
}

.align-start {
    align-items: flex-start;
}

.layout-margin-bottom-1 {
    margin-bottom: 1px;
}

.layout-margin-top-8 {
    margin-top: 8px;
}

.layout-margin-bottom-20 {
    margin-bottom: 20px;
}

.layout-margin-bottom-8 {
    margin-bottom: 8px;
}

.layout-margin-top {
    margin-top: 16px;
}

.layout-padding {
    padding: 16px;
}

.layout-padding-right {
    padding-right: 16px;
}

.layout-padding-left {
    padding-left: 16px;
}

.layout-padding-4 {
    padding: 4px;
}

.layout-padding-8 {
    padding: 8px;
}

.left-column {
    min-width: 300px;
    width: 20%;
    padding-top: 0px;
}

.pie .arc path:hover {
    opacity: .8;
}

.pie-data-header {
    font-size: 18px;
    margin: 8px 0 16px 0;
    padding-top: 8px;
    text-align: center;
    color: #000000;
}

.additional-info {
    text-align: center;
    font-size: 14px;
    color: #6b6b6b;
    justify-content: space-around;
    padding-top: 8px;
}

.additional-info .link {
    text-transform: capitalize;
}

.fa {
    display: inline-block;
    width: 12px;
    height: 12px;
    fill: #2B7AE5;
    line-height: inherit;
    align-self: center;
}

.fa-medium {
    width: 16px;
    height: 16px;
}

.border-left {
    border-left-style: solid;
    border-left-width: 10px;
    border-color: inherit;
}

.border-no-violation {
    border-left: 1px solid #dedede;
}

.border-grey {
    border: 1px solid #eee;
}

.row {
    color: #333333;
    font-size: 14px;
}

.violation-row {
    border-top: 1px solid #dedede;
    border-right: 1px solid #dedede;
    border-bottom: 1px solid #dedede;
}

.violation-divider {
    text-align: center;
    position: relative;
    margin: 20px;
    height: 20px;
}

.violation-divider .text {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    z-index: 2;
    width: 150px;
    text-align: center;
    color: #777;
    text-transform: uppercase;
    font-weight: 600;
    background-color: #f2f2f2;
}

.violation-divider:before {
    content: '';
    width: 100%;
    position: absolute;
    left: 0;
    margin: 10px 0;
    height: 1px;
    border-top: 1px solid #ddd;
    z-index: 1;
}

.font-12 {
    font-size: 12px;
}

.flex-row {
    display: -webkit-flex; /* Safari */
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

.flex-column {
    display: -webkit-flex; /* Safari */
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.flex-grow {
    flex-grow: 2;
}

.flex-50 {
    flex: 0 0 50%;
}

.align-center {
    align-content: center;
    align-items: center;
}

.opacity-hover-80:hover{
    opacity: .8;
    cursor: pointer;
}
.old-data-mask {
    opacity: .7;
    cursor: pointer;
}

.link {
    text-transform: uppercase;
    color: #2B7AE5;
    cursor: pointer;
}

.link:hover {
    opacity: .8;
}

.link a {
    text-decoration: none;
    color: #2B7AE5;
}

.browse-composites {
    cursor: pointer;
    color: #2B7AE5;
}

.medium-grey {
    color: #6b6b6b;
}

.subheader {
    font-size: 18px;
    margin-bottom: 10px;
    text-transform: capitalize;
}

.md-shadow {
    box-shadow: rgba(0, 0, 0, 0.2) 0 1px 25px -5px;
}

.bg-white {
    background: #ffffff;
}

.bg-light-grey {
    background: #F2F2F2;
}

.separator {
    border: 1px solid #E4E4E4;
}

.separator-top {
    border-top: 1px solid #E4E4E4;
}

.separator-right {
    border-right: 1px solid #E4E4E4;
}

.row-right-column {
    width: 220px;
    flex: none;
}

.row-right-column .link {
    line-height: 30px;
}

.link img.left {
    margin-right: 8px;
}

.link img.right {
    margin-left: 8px;
}

.details-btn {
    font-size: 12px;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
    -khtml-user-select: none; /* Konqueror */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none;
}

.row-header {
    line-height: 20px;
}

.title {
    font-size: 18px;
    font-weight: 700;
    text-transform: capitalize;
}

.passed-disabled-title {
    font-size: 12pt;
    color: #6b6b6b;
    font-weight: 600;
}

.show-all {
    background: #E4E4E4;
    flex-grow: 1;
    padding: 10px 16px;
    font-size: 14px;
    line-height: 18px;
    margin: 15px 0 4px 0;
    cursor: pointer;
    text-transform: uppercase;
    color: #2B7AE5;
    text-align: center;
    font-weight: 700;
}

.show-all:hover {
    color: #ffffff;
    background: linear-gradient(to top, #2B7AE5, #4b96fd);
    border-radius: 3px;
}

.history-header {
    font-weight: 700;
    font-size: 14px;
    display: inline-block;
    padding: 16px 0;
    text-transform: uppercase;
}

.history-column {
    font-size: 14px;
    color: #6b6b6b;
}

.flex-wrap {
    -webkit-flex-wrap: nowrap;
    flex-wrap: nowrap;
    word-wrap: break-word;
}

.content-data {
    padding-top: 20px;
}

.list .row-body {
    -webkit-transition: max-height 0.5s;
    -moz-transition: max-height 0.5s;
    -ms-transition: max-height 0.5s;
    -o-transition: max-height 0.5s;
    transition: max-height 0.5s;
    overflow: hidden;
}

.audit-list-block {
    display: -webkit-flex; /* Safari */
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

.map-cont {
    max-width: 1200px;
}

#no-violation-resources, #no-deploy-resources, .resources-are-loading {
    margin: 0 auto;
    font-size: 18px;
    color: #6d6d6d;
    text-align: center;
    padding: 25px;
}

#no-violations-view .tip {
    margin: 0 auto;
    font-size: 18px;
    color: #333333;
    text-align: center;
    padding: 25px;
}

#list-header-tmpl {
    background: #ffffff;
}

.advisor-error {
    padding: 10px;
    border: 1px solid #E4E4E4;
}

.advisor-error .view-row {
    display: flex;
    flex-direction: row;
    color: #E53E2B;
    cursor: pointer;
}

.advisor-error .view-row div {
    flex-grow: 1;
    margin-right: 10px;
}

.advisor-error .logs {
    display: flex;
    flex-direction: row;
    background: #f2f2f2;
    font-size: 13px;
    margin-top: 10px;
}

.advisor-error .logs > div {
    width: 50%;
    padding: 10px;
}

.advisor-error .logs .logs-output b {
    color: #E53E2B;
}

.advisor-error .logs .label {
    font-weight: 700;
    font-size: 14px;
    margin-bottom: 10px;
}

.empty {
    display: none;
}

.no-violations-message {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.no-violations-message .messages {
    display: flex;
    flex-direction: column;
}

.no-violations-message .messages .message-1 {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 36pt;
    color: #2B9F85;
}

.no-violations-message .messages .message-2 {
    color: #000000;
    font-size: 36pt;
    padding-bottom: 25px;
    border-bottom: 1px solid #E4E4E4;
    margin-bottom: 25px;
}

.no-violations-message .messages .message-3 {
    font-size: 14pt;
    color: #6b6b6b;
}

.resources-title-link {
    color: #2b7ae5;
    cursor: pointer;
    white-space: nowrap;
}

.suppressed {
    padding: 1px 3px;
    text-transform: uppercase;
    color: #6b6b6b;
    background: #e4e4e4;
    border-radius: 3px;
    font-size: 11px;
    text-align: center;
    white-space: nowrap;
}

.violation-level {
    color: #6b6b6b;
    font-weight: 600;
}

.suggestions-block {
    background-color: #f2f2f2;
}

.audit-data-is-not-ready {
    padding: 30px;
    text-align: center;
    font-size: 18px;
}

.meta-info {
    padding: 4px 16px;
}
.meta-info i {
    text-transform: capitalize;
}

.run-error {
    padding: 15px;
    background-color: #f0e0de;
}

.run-error .label {
    color: #E53E2B;
    font-weight: 600;
    text-transform: capitalize;
}

.run-error span {
    color: #6b6b6b;
}

.run-error a {
    text-decoration: underline;
    color: #6b6b6b;
}
.run-error a:hover {
    cursor: pointer;
    color: #4c4c4d;
}

@media (max-width: 600px) {
    .left-column {
        width: 100%;
        padding-bottom: 0;
    }

    .flex-wrap {
        -webkit-flex-wrap: wrap;
        flex-wrap: wrap;
        word-wrap: break-word;
    }

    .content-data {
        background: none;
        padding-top: 0;
    }

    .type-buttons {
        display: none;
    }

    .row-header {
        flex-direction: column;
    }

    .list > div {
        background: none;
    }

    .data-container .audit {
        flex-direction: column;
    }
}

@media (max-width: 800px) {

    .audit-list-block {
        flex-direction: column;
    }

    .left-column {
        margin: 0 auto;
    }
}

